--- a/src/app/components/event/event.component.scss
+++ b/src/app/components/event/event.component.scss
@@ -33,7 +33,7 @@
 .note-card {
   // Solid card background similar to Facebook UI
   background-color: var(--mat-sys-surface-container-low);
-  border: none !important;
+  // border: none !important;
   box-shadow: none !important;
   transition:
     background-color 0.2s ease-in-out,
