--- a/src/app/components/content/note-content/note-content.component.scss
+++ b/src/app/components/content/note-content/note-content.component.scss
@@ -41,6 +41,12 @@
   }
 }
 
+// URL styling - allows long URLs to wrap properly
+.url-link {
+  overflow-wrap: break-word;
+  word-break: break-word;
+}
+
 // Dark theme support
 .dark-theme {
   .unsupported-video {
