--- a/src/app/pages/settings/relays/relays.component.html
+++ b/src/app/pages/settings/relays/relays.component.html
@@ -94,7 +94,7 @@
         </mat-card>
         }
 
-        @if (showUpdateDMRelays()) {
+        @if (showUpdateDMRelays() && userRelays().length > 0) {
         <mat-card class="info-card">
           <mat-card-header>
             <mat-card-title>
