feat: Update extension error message to include Blockcore Wallet

--- a/src/app/components/login-dialog/login-dialog.component.html
+++ b/src/app/components/login-dialog/login-dialog.component.html
@@ -264,8 +264,8 @@
 
     @if (extensionError()) {
     <div class="extension-error">
-      <p>{{ extensionError() }}</p>
-      <p>Make sure you have a Nostr extension installed like Alby or nos2x</p>
+      <!-- <p>{{ extensionError() }}</p> -->
+      <p>Make sure you have a Nostr extension installed like Blockcore Wallet, Alby or nos2x</p>
     </div>
     }
     }
